Fix time column in schedule shrinking
Time column would shrink if the screen width get too small.

--- a/src/styles/layouts/_home.scss
+++ b/src/styles/layouts/_home.scss
@@ -107,7 +107,8 @@
       gap: 1em;
 
       time {
-        width: 2.5em;
+        width: 2em;
+        flex-shrink: 0;
       }
 
       .minute {
